# npc-society-protocol

./: .gitignore  README.md  buf.gen.yaml  buf.yaml
.cursor/: PROJECT_CONTEXT.md
.github/workflows/: proto-ci.yml
docs/: EXAMPLE.md
examples/java/: README.md  build.gradle.kts  settings.gradle.kts
examples/java/src/main/java/com/npcsociety/examples/: ExampleClient.java
examples/rust/: Cargo.toml  README.md  build.rs
examples/rust/src/: integration_test.rs  main.rs
proto/npc_society/v1/: npc_society.proto
