[package]
name = "npc-society-protocol-example"
version = "0.1.0"
edition = "2021"
description = "Minimal example server for NPC Society protocol"

[[bin]]
name = "example-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
